<resources>
  <string name="app_name">PexelsApp</string>
  <!--  SearchBar-->
  <string name="search_bar_hint">Search for a image</string>
  <string name="search_bar_placeholder">Search..</string>
  <!--  Route Labels-->
  <string name="home_route">Home Route</string>
  <string name="detail_route">Details Route</string>
  <string name="best_photos">Best Photos</string>
  <string name="best_photos_text">Trending photos during this hour</string>
  <string name="by_photographer">By %s</string>
  <string name="collections_title">Collections</string>
  <string name="collections_desc">Some of the featured collections</string>
  <string name="set_wallpaper_text">Set Wallpaper</string>
  <string name="share_photo_text">Share</string>
  <string name="download_photo_text">Download</string>
  <!--  Transition Names-->
  <string name="transition_photo">Transition Photo for %d</string>
  <string name="transition_photo_large">Transition Photo Large</string>
  <!--  Navigation-->
  <string name="home_fragment">Home Fragment</string>
  <string name="search_fragment">Search Fragment</string>
  <string name="photo_details_fragment">Photo Details Fragment</string>
  <string name="collection_fragment">Collection Fragment</string>
  <!--  Search Bar-->
  <string name="search_bar_filter_label">Search Filters</string>
  <string name="no_search_results">To be worked on</string>
  <string name="no_cached_results_text">No Saved Search</string>
  <string name="search_filter_title">Search Filters</string>
  <string name="dialog_done_text">Done</string>
  <!--  Collections-->
  <string name="collection_title">Collection</string>
  <string name="bracket_surrounded_number">( %d )</string>
  <!--  Details -->
  <string name="info_menu_option_title">Information</string>
  <!--  Download Options-->
  <string name="download_option_medium">Medium</string>
  <string name="download_option_large">Large</string>
  <string name="download_option_landscape">Landscape</string>
  <string name="download_option_portrait">Portrait</string>
  <!--  Search Filters-->
  <string name="search_filters_title">Search Filters</string>
  <string name="search_filter_orientation">Orientation</string>
  <string name="search_filter_orientation_all">All</string>
  <string name="search_filter_orientation_portrait">Portrait</string>
  <string name="search_filter_orientation_square">Square</string>
  <string name="search_filter_orientation_landscape">Landscape</string>
  <string name="search_filter_size_options">Sizes</string>
  <string name="search_filter_size_option_large">Large</string>
  <string name="search_filter_size_option_medium">Medium</string>
  <string name="search_filter_size_option_small">Small</string>
  <string name="search_filter_size_option_all">All</string>
  <!--  Error Container Title-->
  <string name="no_search_results_text">No search results to show</string>
  <string name="search_error_title">Cannot Search</string>
  <string name="close_dialog_text">Close</string>
  <string name="unknown_error_message">Unknown Error Message</string>
  <string name="retry_text">Retry</string>
  <string name="loading_text">Loading…</string>
  <string name="failed_to_load_collection">Failed To Load Collection</string>
  <string name="loading_content_text">Preparing your content</string>
  <string name="photo_details_error_title">Some Error Occurred</string>
  <string name="photo_info_dimensions">Dimensions</string>
  <string name="photo_info_photo_taken_by">Photo taken By</string>
  <string name="place_holder_color">PlaceHolder color</string>
  <string name="photo_details_text">Photo Details</string>
  <string name="photo_dimensions">%d x %d</string>
  <string name="dismiss_button">Dismiss</string>
  <string name="wallpaper_option_home_screen">Home Screen</string>
  <string name="wallpaper_option_lock_screen">Lock Screen</string>
  <string name="wallpaper_option_home_and_lock">Home And Lock Screens</string>
  <string name="wallpaper_sheet_heading">Apply Wallpaper</string>
  <string name="wallpaper_sheet_text">You can apply wallpaper to particular screens or apply wallpaper to both screens even with other third part installed application</string>
  <string name="wallpaper_option_other_third_party_app">Other Third Party App</string>
  <string name="set_wallpaper_via_other_title">Set Wallpaper via other apps</string>
  <string name="download_option_title">Download Options</string>
  <string name="download_option_text">You can download the images of these specific size configurations</string>
  <string name="search_filters_text">Search Filters to be applied to the search. Search preferences are saved for future searches</string>
  <string name="share_image_intent_chooser_title">Share Image Url</string>
  <string name="wallpaper_applied_text">New Wallpaper Applied</string>
</resources>