<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <com.google.android.material.textview.MaterialTextView
    style="@style/TextAppearance.Material3.TitleMedium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/spacer_spacing_4"
    android:text="@string/search_filter_orientation" />

  <com.google.android.material.card.MaterialCardView
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium">

    <RadioGroup
      android:id="@+id/orientation_options"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacer_spacing_8">

      <RadioButton
        android:id="@+id/orientation_option_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_filter_orientation_all"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

      <RadioButton
        android:id="@+id/orientation_option_portrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_filter_orientation_portrait"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

      <RadioButton
        android:id="@+id/orientation_option_landscape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_filter_orientation_landscape"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

      <RadioButton
        android:id="@+id/orientation_option_square"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_filter_orientation_square"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    </RadioGroup>

  </com.google.android.material.card.MaterialCardView>

</LinearLayout>