<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingHorizontal="@dimen/scaffold_horizontal_padding"
  android:orientation="vertical">

  <com.google.android.material.bottomsheet.BottomSheetDragHandleView
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <com.google.android.material.textview.MaterialTextView
    style="@style/TextAppearance.Material3.HeadlineSmall"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacer_spacing_4"
    android:text="@string/wallpaper_sheet_heading"
    android:textAlignment="center" />


  <com.google.android.material.textview.MaterialTextView
    style="@style/TextAppearance.Material3.BodyMedium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/spacer_spacing_8"
    android:text="@string/wallpaper_sheet_text"
    android:textAlignment="center" />

  <Button
    android:id="@+id/option_third_party_app"
    style="@style/Widget.Material3.Button.OutlinedButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacer_spacing_4"
    android:paddingVertical="@dimen/spacer_spacing_12"
    android:text="@string/wallpaper_option_other_third_party_app"
    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
    app:shapeAppearance="?attr/shapeAppearanceCornerMedium"

    />

  <Button
    android:id="@+id/option_home"
    style="@style/Widget.Material3.Button.OutlinedButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacer_spacing_4"
    android:paddingVertical="@dimen/spacer_spacing_12"
    android:text="@string/wallpaper_option_home_screen"
    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
    app:shapeAppearance="?attr/shapeAppearanceCornerMedium" />

  <Button
    android:id="@+id/option_lock"
    style="@style/Widget.Material3.Button.OutlinedButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacer_spacing_4"
    android:paddingVertical="@dimen/spacer_spacing_12"
    android:text="@string/wallpaper_option_lock_screen"
    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
    app:shapeAppearance="?attr/shapeAppearanceCornerMedium" />

  <Button
    android:id="@+id/option_home_lock"
    style="@style/Widget.Material3.Button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacer_spacing_4"
    android:paddingVertical="@dimen/spacer_spacing_12"
    android:text="@string/wallpaper_option_home_and_lock"
    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
    app:shapeAppearance="?attr/shapeAppearanceCornerMedium" />


</LinearLayout>