<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="@dimen/scaffold_horizontal_padding">

  <com.google.android.material.textview.MaterialTextView
    style="@style/TextAppearance.Material3.HeadlineSmall"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/best_photos" />

  <com.google.android.material.textview.MaterialTextView
    style="@style/TextAppearance.Material3.BodyMedium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/best_photos_text"
    android:textColor="?attr/colorOutline" />

  <Space
    android:layout_width="match_parent"
    android:layout_height="@dimen/spacer_spacing_4" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/curated_photos"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".3"
    android:orientation="horizontal"
    app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
    tools:itemCount="3"
    tools:listitem="@layout/carousel_photos_layout" />

  <Space
    android:layout_width="match_parent"
    android:layout_height="@dimen/spacer_spacing_8" />

  <com.google.android.material.textview.MaterialTextView
    style="@style/TextAppearance.Material3.TitleLarge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/collections_title" />

  <com.google.android.material.textview.MaterialTextView
    style="@style/TextAppearance.Material3.BodyMedium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/collections_desc"
    android:textColor="?attr/colorOutline" />

  <Space
    android:layout_width="match_parent"
    android:layout_height="@dimen/spacer_spacing_6" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/collections"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".5"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:itemCount="10"
    tools:listitem="@layout/collection_media_layout" />


</LinearLayout>




