<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_graph"
  app:startDestination="@id/home_fragment">

  <fragment
    android:id="@+id/home_fragment"
    android:name="com.eva.pexelsapp.presentation.feature_home.HomeFragment"
    android:label="@string/home_fragment"
    tools:layout="@layout/home_fragment">
    <action
      android:id="@+id/action_home_fragment_to_photo_details_fragment"
      app:destination="@id/photo_details_fragment"
      app:restoreState="true" />
    <action
      android:id="@+id/action_home_fragment_to_collection_fragment"
      app:destination="@id/collection_fragment" />
  </fragment>

  <fragment
    android:id="@+id/collection_fragment"
    android:name="com.eva.pexelsapp.presentation.feature_collections.PhotoCollectionFragment"
    android:label="@string/collection_fragment"
    tools:layout="@layout/photo_collection_fragment">

    <argument
      android:name="collection"
      app:argType="com.eva.pexelsapp.data.parcelable.PhotoCollectionParcelable" />
    <action
      android:id="@+id/action_collection_fragment_to_photo_details_fragment"
      app:destination="@id/photo_details_fragment"
      app:restoreState="true" />
  </fragment>

  <fragment
    android:id="@+id/photo_details_fragment"
    android:name="com.eva.pexelsapp.presentation.feature_detailed.PhotoDetailsFragment"
    android:label="@string/photo_details_fragment"
    tools:layout="@layout/photo_detailed_fragment">
    <argument
      android:name="photoRes"
      app:argType="com.eva.pexelsapp.data.parcelable.PhotoResourceParcelable" />
  </fragment>

</navigation>