<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <Button
    android:id="@+id/filledTonalButton"
    style="@style/Widget.Material3.Button.IconButton.Filled"
    android:layout_width="match_parent"
    android:layout_height="@dimen/photo_action_button_dimension"
    android:text="@string/set_wallpaper_text"
    android:textAppearance="?attr/textAppearanceBodyLarge"
    android:textColor="?attr/colorOnPrimary"
    app:icon="@drawable/ic_wallpaper"
    app:iconGravity="textStart"
    app:iconPadding="@dimen/spacer_spacing_12"
    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
      style="@style/Widget.Material3.Button.IconButton.Outlined"
      android:layout_width="0dp"
      android:layout_height="@dimen/photo_action_button_dimension"
      android:layout_weight=".5"
      android:text="@string/share_photo_text"
      android:textAppearance="?attr/textAppearanceBodyMedium"
      app:icon="@drawable/ic_share"
      app:iconGravity="textStart"
      app:iconPadding="@dimen/spacer_spacing_8"
      app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large" />

    <Button
      style="@style/Widget.Material3.Button.IconButton.Outlined"
      android:layout_width="0dp"
      android:layout_height="@dimen/photo_action_button_dimension"
      android:layout_weight=".5"
      android:text="@string/download_photo_text"
      android:textAppearance="?attr/textAppearanceBodyMedium"
      app:icon="@drawable/ic_download"
      app:iconGravity="textStart"
      app:iconPadding="@dimen/spacer_spacing_8"
      app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large" />
  </LinearLayout>


</LinearLayout>